<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRegisterPage"
    android:paddingTop="8dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:textSize="16dp"
            android:layout_height="wrap_content"
            android:textColor="#220a96"
            android:text="@string/s_swipe"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=">>>"/>

    </LinearLayout>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="23dp"
                android:layout_marginTop="35dp"
                android:textColor="#220a96"
                android:text="@string/s_upgrade"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/s_pro_pic"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/propic"
                    />
                <TextView
                    android:id="@+id/s_txtpicpath"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorRedittxt"
                    android:text="@string/s_uploadpic"/>
                <Button
                    android:id="@+id/s_btnupload"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:textSize="18dp"
                    android:background="@color/colorRedittxt"
                    android:textColor="#ffffff"
                    android:text="@string/s_upload"/>

            </LinearLayout>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/s_school"
                android:padding="8dp"
                android:background="@drawable/register_edit_txt_bg"
                android:gravity="center_vertical"
                android:ems="10"
                android:textColorHint="@color/colorRedittxt"
                android:layout_marginTop="15dp"
                android:id="@+id/u_school"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/s_college"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/register_edit_txt_bg"
                android:textColorHint="@color/colorRedittxt"
                android:ems="10"
                android:layout_marginTop="12dp"
                android:id="@+id/u_colz"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/s_w_place"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/register_edit_txt_bg"
                android:textColorHint="@color/colorRedittxt"
                android:ems="10"
                android:layout_marginTop="12dp"
                android:id="@+id/u_wplace"
                android:layout_gravity="center_horizontal" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/s_area_1"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/register_edit_txt_bg"
                android:textColorHint="@color/colorRedittxt"
                android:ems="10"
                android:layout_marginTop="12dp"
                android:id="@+id/u_area1"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/s_area_2"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/register_edit_txt_bg"
                android:textColorHint="@color/colorRedittxt"
                android:ems="10"
                android:layout_marginTop="12dp"
                android:id="@+id/u_area2"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/s_area_3"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:background="@drawable/register_edit_txt_bg"
                android:textColorHint="@color/colorRedittxt"
                android:ems="10"
                android:layout_marginTop="12dp"
                android:id="@+id/u_area3"
                android:layout_gravity="center_horizontal" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_weight="5">

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:gravity="center"
                android:textSize="18dp"
                android:textColor="#FFFFFF"
                android:text="@string/s_btn_upgrade"
                android:background="#0303a1"
                android:id="@+id/s_btnupgrade"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
